Started using core images for ROS 1 build too, removed sudo and added rosdep init
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,11 +5,11 @@ jobs:
   ros1:
     runs-on: ubuntu-20.04
     container:
-      image: docker://ros:noetic-ros-base-focal
+      image: docker://ros:noetic-ros-core-focal
     steps:
     - name: non-ros-deps
       run: |
-        sudo apt update && sudo apt install \
+        apt update && apt install \
           git wget qt5-default \
           python3-rosdep \
           python3-vcstool \
@@ -28,6 +28,7 @@ jobs:
     - name: ros-deps
       run: |
         cd ros1_ws
+        rosdep init
         rosdep update
         rosdep install \
           --from-paths src \
@@ -55,7 +56,7 @@ jobs:
     steps:
     - name: non-ros-deps
       run: |
-        sudo apt update && sudo apt install \
+        apt update && apt install \
           git wget qt5-default \
           python3-rosdep \
           python3-vcstool \
@@ -74,6 +75,7 @@ jobs:
     - name: ros-deps
       run: |
         cd ros2_ws
+        rosdep init
         rosdep update
         rosdep install \
           --from-paths src \
