--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -51,11 +51,11 @@ jobs:
   ros2:
     runs-on: ubuntu-20.04
     container:
-      image: docker://ros:foxy-ros-base-focal
+      image: docker://ros:foxy-ros-core-focal
     steps:
     - name: non-ros-deps
       run: |
-        sudo apt update && sudo apt install \
+        apt update && apt install \
           git wget qt5-default \
           python3-rosdep \
           python3-vcstool \
@@ -66,7 +66,7 @@ jobs:
         mkdir -p ros2_ws/src
         cd ros2_ws/src
         git clone https://github.com/osrf/free_fleet
-        git clone https://github.com/osrf/rmf_core
+        git clone https://github.com/open-rmf/rmf_internal_msgs
     - name: checkout
       uses: actions/checkout@v2
       with:
@@ -74,6 +74,7 @@ jobs:
     - name: ros-deps
       run: |
         cd ros2_ws
+        rosdep init
         rosdep update
         rosdep install \
           --from-paths src \
