--- a/free_fleet_client_ros1/CMakeLists.txt
+++ b/free_fleet_client_ros1/CMakeLists.txt
@@ -56,7 +56,7 @@ if (catkin_FOUND)
 
   set(testing_targets
     fake_action_server
-    fake_charger_server
+    fake_docking_server
   )
   
   foreach(target ${testing_targets})
