Adding mandatory runs-on field to 20.04
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,6 +9,7 @@ jobs:
 
   ros1_build:
     name: ros1_build
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         ros_distribution:
@@ -37,6 +38,7 @@ jobs:
 
   ros2_build:
     name: ros2_build
+    runs-on: ubuntu-20.04
     strategy:
       matrix:
         ros_distribution:
