--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -9,23 +9,18 @@ jobs:
 
   ros1_build:
     name: ros1_build
-    strategy:
-      matrix:
-        ros_distribution:
-          - kinetic
-          - melodic
-          - noetic
+    runs-on: ubuntu-20.04
     steps:
       - name: pwd
         run: pwd
       - name: deps
         uses: ros-tooling/setup-ros@v0.2
         with:
-          required-ros-distributions: ${{ matrix.ros_distribution }} 
+          required-ros-distributions: noetic 
       - name: build
         uses: ros-tooling/action-ros-ci@v0.2
         with:
-          target-ros1-distro: ${{ matrix.ros_distribution }}
+          target-ros1-distro: noetic 
           # build all packages listed in the meta package
           package-name: |
             free_fleet
@@ -37,22 +32,18 @@ jobs:
 
   ros2_build:
     name: ros2_build
-    strategy:
-      matrix:
-        ros_distribution:
-          - foxy 
-          - galactic 
+    runs-on: ubuntu-20.04
     steps:
       - name: pwd
         run: pwd
       - name: deps
         uses: ros-tooling/setup-ros@v0.2
         with:
-          required-ros-distributions: ${{ matrix.ros_distribution }} 
+          required-ros-distributions: foxy
       - name: build
         uses: ros-tooling/action-ros-ci@v0.2
         with:
-          target-ros2-distro: ${{ matrix.ros_distribution }}
+          target-ros2-distro: foxy
           # build all packages listed in the meta package
           package-name: |
             free_fleet
