Fixed linting errors and rmf_cmake_uncrustify incantations
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_cyclonedds/CMakeLists.txt
+++ b/free_fleet_cyclonedds/CMakeLists.txt
@@ -76,7 +76,9 @@ if (BUILD_TESTING AND ament_cmake_catch2_FOUND AND rmf_cmake_uncrustify_FOUND)
       $<BUILD_INTERFACE:${CMAKE_CURRENT_LIST_DIR}/>
   )
 
-  find_file(uncrustify_config_file NAMES "share/format/rmf_code_style.cfg")
+  find_file(uncrustify_config_file
+    NAMES "rmf_code_style.cfg"
+    PATHS "${rmf_utils_DIR}/../../../share/rmf_utils/")
 
   rmf_uncrustify(
     ARGN include src test
