--- a/free_fleet_client_ros2/package.xml
+++ b/free_fleet_client_ros2/package.xml
@@ -15,6 +15,9 @@
   <depend>nav2_util</depend>
   <depend>geometry_msgs</depend>
   <depend>tf2</depend>
+  <depend>nav2_msgs</depend>
+  <depend>std_srvs</depend>
+  <depend>sensor_msgs</depend>
   <depend>rmf_fleet_msgs</depend>
   <depend>free_fleet</depend>
 
