--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -5,48 +5,35 @@ on:
     - cron: '0 0 * * *'
 
 jobs:
-
-  ros1_build:
-    name: ros1_build
-    runs-on: ubuntu-20.04
-    steps:
-      - name: pwd
-        run: pwd
-      - name: deps
-        uses: ros-tooling/setup-ros@v0.4
-        with:
-          required-ros-distributions: noetic
-      - name: build
-        uses: ros-tooling/action-ros-ci@v0.2
-        with:
-          target-ros1-distro: noetic
-          # build all packages listed in the meta package
-          package-name: |
-            free_fleet
-            ff_examples_ros1
+  ros_build:
+      strategy:
+        fail-fast: false
+        matrix:
+          checks: [
+            { ROS_VERSION: "ros2", ROS_DISTRO: "humble", UBUNTU_DISTRO: "22.04", PACKAGES: "
+            free_fleet_server_ros2"},
+            { ROS_VERSION: "ros1", ROS_DISTRO: "noetic", UBUNTU_DISTRO: "20.04", PACKAGES: "
             ff_rviz_plugins_ros1
-            free_fleet_client_ros1
-          vcs-repo-file-url: |
-            https://raw.githubusercontent.com/open-rmf/free_fleet/main/ff_ros1.repos
+            free_fleet_client_ros1" },
+          ]
+      name: ${{matrix.checks.ROS_VERSION}}_build
+      runs-on: ubuntu-${{matrix.checks.UBUNTU_DISTRO}}
+      steps:
+        - name: pwd
+          run: pwd
+        - name: deps
+          uses: ros-tooling/setup-ros@v0.4
+          with:
+            required-ros-distributions: ${{matrix.checks.ROS_DISTRO}}
+        - name: build
+          uses: ros-tooling/action-ros-ci@v0.2
+          with:
+            target-${{matrix.checks.ROS_VERSION}}-distro: ${{matrix.checks.ROS_DISTRO}}
+            # build all packages listed in the meta package
+            package-name: |
+              free_fleet
+              ff_examples_${{matrix.checks.ROS_VERSION}}
+              ${{matrix.checks.PACKAGES}}
+            vcs-repo-file-url: |
+              https://raw.githubusercontent.com/open-rmf/free_fleet/main/ff_${{matrix.checks.ROS_VERSION}}.repos
 
-  ros2_build:
-    name: ros2_build
-    runs-on: ubuntu-22.04
-    steps:
-      - name: pwd
-        run: pwd
-      - name: deps
-        uses: ros-tooling/setup-ros@v0.4
-        with:
-          required-ros-distributions: humble
-      - name: build
-        uses: ros-tooling/action-ros-ci@v0.2
-        with:
-          target-ros2-distro: humble
-          # build all packages listed in the meta package
-          package-name: |
-            free_fleet
-            ff_examples_ros2
-            free_fleet_server_ros2
-          vcs-repo-file-url: |
-            https://raw.githubusercontent.com/open-rmf/free_fleet/main/ff_ros2.repos
