--- a/free_fleet_examples/CMakeLists.txt
+++ b/free_fleet_examples/CMakeLists.txt
@@ -47,7 +47,8 @@ foreach(path ${traffic_editor_paths})
 endforeach()
 
 install(PROGRAMS
-  ${PROJECT_NAME}/navigate_to_pose.py
+  ${PROJECT_NAME}/tests/test_navigate_to_pose.py
+  ${PROJECT_NAME}/tests/test_tf.py
   DESTINATION lib/${PROJECT_NAME}
 )
 
