--- a/free_fleet_examples/package.xml
+++ b/free_fleet_examples/package.xml
@@ -11,6 +11,9 @@
   <buildtool_depend>rmf_building_map_tools</buildtool_depend>
   <buildtool_depend>ros2run</buildtool_depend>
 
+  <exec_depend>free_fleet</exec_depend>
+  <exec_depend>tf2_ros</exec_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
