Tweaking results and got cancellation
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_examples/CMakeLists.txt
+++ b/free_fleet_examples/CMakeLists.txt
@@ -47,6 +47,7 @@ foreach(path ${traffic_editor_paths})
 endforeach()
 
 install(PROGRAMS
+  ${PROJECT_NAME}/tests/test_cancel_all_goals.py
   ${PROJECT_NAME}/tests/test_navigate_to_pose.py
   ${PROJECT_NAME}/tests/test_tf.py
   DESTINATION lib/${PROJECT_NAME}
