Using tf_transformations, flesh out more implementation
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_adapter/package.xml
+++ b/free_fleet_adapter/package.xml
@@ -18,6 +18,7 @@
   <exec_depend>rmf_fleet_msgs</exec_depend>
   <exec_depend>rmf_task_msgs</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
+  <exec_depend>tf_transformations</exec_depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
