Basic launch done
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_examples/CMakeLists.txt
+++ b/free_fleet_examples/CMakeLists.txt
@@ -53,4 +53,14 @@ install(PROGRAMS
   DESTINATION lib/${PROJECT_NAME}
 )
 
+install(DIRECTORY
+  launch/
+  DESTINATION share/${PROJECT_NAME}
+)
+
+install(DIRECTORY
+  configs/
+  DESTINATION share/${PROJECT_NAME}/configs
+)
+
 ament_package()
