--- a/free_fleet_examples/configs/turtlebot3_world/turtlebot3_world_fleet_config.yaml
+++ b/free_fleet_examples/configs/turtlebot3_world/turtlebot3_world_fleet_config.yaml
@@ -36,11 +36,12 @@ rmf_fleet:
     turtlebot3_1:
       charger: "turtlebot3_1_charger"
       responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+      # For Nav2RobotAdapter
       initial_map: "L1"
       maps:
         L1:
           map_url: "/opt/ros/humble/share/nav2_bringup/maps/turtlebot3_world.yaml"
-      initial_pose: [-1.6000019311904907, -0.5031192898750305, 0]
+      # initial_pose: [-1.6000019311904907, -0.5031192898750305, 0]
 
     # turtlebot3_2:
     #   charger: "turtlebot3_2_charger"
