Basic working with patrol tasks
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_examples/configs/example.json5
+++ b/free_fleet_examples/configs/example.json5
@@ -31,7 +31,7 @@
       ////               Note that this also applies to topics with absolute path such as "/rosout", "/tf" and "/tf_static".
       ////            Default: "/"
       ////
-      namespace: "/robot_ns",
+      namespace: "/turtlebot3_1",
 
       ////
       //// domain: The DDS Domain ID. By default set to 0, or to "$ROS_DOMAIN_ID" is this environment variable is defined.
