--- a/free_fleet_examples/configs/turtlebot3_world/turtlebot3_world_fleet_config.yaml
+++ b/free_fleet_examples/configs/turtlebot3_world/turtlebot3_world_fleet_config.yaml
@@ -30,7 +30,7 @@ rmf_fleet:
     loop: True
     delivery: True
   # actions: ["some_action_here"]
-  finishing_request: "park" # [park, charge, nothing]
+  finishing_request: "nothing" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   robots:
     turtlebot3_1:
@@ -56,21 +56,11 @@ rmf_fleet:
 # Optional
 reference_coordinates:
   L1:
-    rmf: [[20.33, -3.156],
-          [8.908, -2.57],
-          [13.02, -3.601],
-          [21.93, -4.124]]
-    robot: [[59, 399],
-          [57, 172],
-          [68, 251],
-          [75, 429]]
-
-
-# # FREE FLEET SERVER CONFIGS ====================================================
-
-# free_fleet_server:
-#   robots:
-#     turtlebot3_1:
-#       namespace: "turtlebot3_1"
-#     # turtlebot3_2:
-#     #   namespace: "turtlebot3_2"
+    rmf: [[8.9508, -6.6006],
+          [7.1006, -9.1508],
+          [12.3511, -9.2008],
+          [11.0510, -11.8010]]
+    robot: [[-1.04555, 2.5456],
+          [-2.90519, 0.00186],
+          [2.39611, -0.061773],
+          [1.08783, -2.59750]]
