Update README, reorganized and renamed configs, testing unique tb3 sim
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/free_fleet_examples/CMakeLists.txt
+++ b/free_fleet_examples/CMakeLists.txt
@@ -59,8 +59,13 @@ install(DIRECTORY
 )
 
 install(DIRECTORY
-  configs/
-  DESTINATION share/${PROJECT_NAME}/configs
+  fleet_configs/
+  DESTINATION share/${PROJECT_NAME}/fleet_configs
+)
+
+install(DIRECTORY
+  zenoh_configs/
+  DESTINATION share/${PROJECT_NAME}/zenoh_configs
 )
 
 ament_package()
