--- a/free_fleet_examples/fleet_configs/unique_multi_tb3_simulation_fleet_config.yaml
+++ b/free_fleet_examples/fleet_configs/unique_multi_tb3_simulation_fleet_config.yaml
@@ -33,21 +33,27 @@ rmf_fleet:
   finishing_request: "nothing" # [park, charge, nothing]
   responsive_wait: True # Should responsive wait be on/off for the whole fleet by default? False if not specified.
   robots:
-    turtlebot3_1:
-      charger: "turtlebot3_1_charger"
+    robot1:
+      charger: "robot1_charger"
       responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
       # For Nav2RobotAdapter
       initial_map: "L1"
       maps:
         L1:
-          map_url: "/opt/ros/humble/share/nav2_bringup/maps/turtlebot3_world.yaml"
-      # initial_pose: [-1.6000019311904907, -0.5031192898750305, 0]
+          map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/turtlebot3_world.yaml"
+      # initial_pose: [0.056320589035749435, 0.5160754323005676, 0]
 
-    # turtlebot3_2:
-    #   charger: "turtlebot3_2_charger"
-    #   # No mention of responsive_wait means the fleet-wide setting will be used
+    robot2:
+      charger: "robot2_charger"
+      responsive_wait: False # Should responsive wait be on/off for this specific robot? Overrides the fleet-wide setting.
+      # For Nav2RobotAdapter
+      initial_map: "L1"
+      maps:
+        L1:
+          map_url: "/opt/ros/jazzy/share/nav2_bringup/maps/turtlebot3_world.yaml"
+      # initial_pose: [-0.03754809871315956, -0.5848855972290039, 0]
 
-  robot_state_update_frequency: 10.0 # Hz
+  robot_state_update_frequency: 2.0 # Hz
 
 
 # TRANSFORM CONFIG =============================================================
