Style workflow on push and PR, lint
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/style.yaml
+++ b/.github/style.yaml
@@ -1,8 +1,7 @@
 name: style
 on:
-  pull_request:
-  push:
-    branches: [ main ]
+  pull_request
+  push
 jobs:
   linter:
     runs-on: ubuntu-latest
