--- a/free_fleet_examples/package.xml
+++ b/free_fleet_examples/package.xml
@@ -16,6 +16,8 @@
   <exec_depend>rmf_demos</exec_depend>
   <exec_depend>tf2_ros</exec_depend>
 
+  <test_depend>ament_cmake_pytest</test_depend>
+
   <export>
     <build_type>ament_cmake</build_type>
   </export>
