--- a/free_fleet/package.xml
+++ b/free_fleet/package.xml
@@ -7,7 +7,14 @@
   <maintainer email="aaron@openrobotics.org">Aaron Chong</maintainer>
   <license>Apache License 2.0</license>
 
+  <exec_depend>builtin_interfaces</exec_depend>
+  <exec_depend>geometry_msgs</exec_depend>
+  <exec_depend>rclpy</exec_depend>
+
   <test_depend>python3-pytest</test_depend>
+  <test_depend>ament_copyright</test_depend>
+  <test_depend>ament_flake8</test_depend>
+  <test_depend>ament_pep257</test_depend>
 
   <export>
     <build_type>ament_python</build_type>
