--- a/free_fleet_adapter/package.xml
+++ b/free_fleet_adapter/package.xml
@@ -20,6 +20,7 @@
   <exec_depend>tf2_ros</exec_depend>
   <exec_depend>tf_transformations</exec_depend>
 
+  <test_depend>python3-pytest</test_depend>
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
   <test_depend>ament_pep257</test_depend>
