On push for testing
Signed-off-by: Aaron Chong <aaronchongth@gmail.com>

--- a/.github/build.yaml
+++ b/.github/build.yaml
@@ -1,12 +1,14 @@
 name: build
-on:
-  pull_request:
-  push:
-    branches:
-      - main
-  workflow_dispatch:
-  schedule:
-    - cron: '23 0 * * *'
+# on:
+#   pull_request:
+#   push:
+#     branches:
+#       - main
+#   workflow_dispatch:
+#   schedule:
+#     - cron: '23 0 * * *'
+
+on: push
 
 jobs:
   build_and_test:
