--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -8,19 +8,21 @@ on: push
 jobs:
   build_and_test:
     runs-on: ubuntu-latest
+    container:
+      image: osrf/ros:${{ matrix.ros_distribution }}-desktop-noble
     strategy:
       matrix:
         ros_distribution:
           - jazzy
           - rolling
     steps:
+      - name: install dependencies
+        run: |
+          sudo apt update && sudo apt install python3-pip -y
+          pip3 install eclipse-zenoh==0.11.0 pycdr2 --break-system-packages
       - uses: ros-tooling/setup-ros@v0.7
         with:
           required-ros-distributions: ${{ matrix.ros_distribution }}
-      - name: install dependencies
-        run: |
-          sudo apt update && sudo apt install python3-pip
-          pip3 install eclipse-zenoh==0.11.0 pycdr2
       - name: build and test
         uses: ros-tooling/action-ros-ci@v0.3
         with:
