--- a/.github/integration-tests/docker-compose.yaml
+++ b/.github/integration-tests/docker-compose.yaml
@@ -4,9 +4,9 @@ services:
   minimal-nav2:
     image: minimal-nav2
     build:
-      context: .github/minimal-nav2
-      # dockerfile: .github/minimal-nav2
-    container_name: minimal-nav2
+      context: ../../
+      dockerfile: .github/minimal-nav2/Dockerfile
+    # container_name: minimal-nav2
     stop_signal: SIGINT
     network_mode: host
     privileged: true
@@ -19,9 +19,9 @@ services:
   zenoh-bridge:
     image: minimal-zenoh-bridge
     build:
-      context: .github/minimal-zenoh-bridge
-      # dockerfile: docker/task_manager/Dockerfile
-    container_name: minimal-zenoh-bridge
+      context: ../../
+      dockerfile: .github/minimal-zenoh-bridge/Dockerfile
+    # container_name: minimal-zenoh-bridge
     network_mode: host
     stdin_open: true
     tty: true
