--- a/.github/minimal-zenoh-bridge/Dockerfile
+++ b/.github/minimal-zenoh-bridge/Dockerfile
@@ -1,7 +1,7 @@
 ARG ROS_DISTRO=jazzy
 FROM docker.io/ros:$ROS_DISTRO-ros-base
 ARG ZENOH_VERSION=1.0.0
-ARG BRANCH=efc/ci
+ARG BRANCH=efc/integration-testing
 
 RUN apt update && apt install -y wget unzip ros-jazzy-rmw-cyclonedds-cpp
 
