--- a/.github/workflows/nightly.yaml
+++ b/.github/workflows/nightly.yaml
@@ -27,4 +27,4 @@ jobs:
 
     - name: Stop containers
       if: always()
-      run: docker-compose -f ".github/integration-tests/docker-compose.yaml"  down
+      run: docker compose -f ".github/integration-tests/docker-compose.yaml"  down
